--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
       span.underline{text-decoration: underline;}
       div.column{display: inline-block; vertical-align: top; width: 50%;}
   </style>
-  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="bootstrap-grid.min.css" />
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
-  <link rel="shortcut icon" href="http://www.cjoshmartin.com/favicon.ico">
+  <link rel="shortcut icon" href="http://www.cjoshmartin.com/favicon.ico"> <link rel="stylesheet" href="font/charter-font.css" type="text/css" charset="utf-8" /> <link rel="stylesheet" href="style.css" type="text/css" charset="utf-8" />
 </head>
 <body>
 <header>
@@ -35,7 +34,7 @@
 </div>
 </div>
 <div class="row">
-<div class="main-content col order-2">
+<div class="main-content col">
 <h2 id="education">Education</h2>
 <dl>
 <dt>Dec 2019</dt>
@@ -51,7 +50,7 @@
 <h2 id="corporate-experience">Corporate Experience</h2>
 <dl>
 <dt>May – Aug. 2018</dt>
-<dd><p><em>Software Engineering Intern for <a href="https://www.sep.com/">Software Engineering Professionals (SEP)</a></em> (Carmel, Indiana)</p>
+<dd><p><em><strong>Software Engineering Intern</strong> for <a href="https://www.sep.com/">Software Engineering Professionals (SEP)</a></em> (Carmel, Indiana)</p>
 <ul>
 <li>Performed TDD and wrote acceptance testing using Cypress, Mocha, Chai, Enzyme, and Istanbul</li>
 <li>Created pull requests and actively participated in code reviews on Github Enterprise</li>
@@ -61,14 +60,14 @@
 </ul>
 </dd>
 <dt>July - Oct. 2017</dt>
-<dd><p><em>Software Engineering Intern with IU School Medicine Department of Radiology and Imaging Sciences</em> (Indianapolis, Indiana)</p>
+<dd><p><em><strong>Software Engineering Intern</strong> with IU School Medicine Department of Radiology and Imaging Sciences</em> (Indianapolis, Indiana)</p>
 <ul>
 <li>Build interfaces for the Doctor, Research Students, and Radiology department in Ruby on Rails, Vagrant and Puppet</li>
 <li>Supplied desktop support by means of imaging and deploying computers</li>
 </ul>
 </dd>
-<dt>May 2016 - April 2017</dt>
-<dd><p><em>Software Quality Assurance Intern at <a href="http://www.thecn.com/">CourseNetworking</a></em> (Indianapolis, Indiana)</p>
+<dt>May 2016 - Apr. 2017</dt>
+<dd><p><em><strong>Software Quality Assurance Intern</strong> at <a href="http://www.thecn.com/">CourseNetworking</a></em> (Indianapolis, Indiana)</p>
 <ul>
 <li>Wrote automation scripts to test CourseNetworking’s UI using Node.js (JavaScript), nightwatch.js (an end to end testing framework) and Selenium Web Driver.</li>
 <li>Worked on a collaborative team, made weekly reports, and met weekly deadlines for scripts.</li>
@@ -76,7 +75,7 @@
 </ul>
 </dd>
 <dt>Nov. 2015 - May 2016</dt>
-<dd><p><em>Digital Job Board Development Specialist Intern at Indiana University School of Dentistry</em> (Indianapolis, Indiana)</p>
+<dd><p><em><strong>Digital Job Board Development Specialist Intern</strong> at Indiana University School of Dentistry</em> (Indianapolis, Indiana)</p>
 <ul>
 <li>Designed email to be backwards compatible with other email clients and be responsive to media queries.</li>
 </ul>
@@ -90,36 +89,49 @@
 <p><strong>Technologies</strong>: React Native, React Navigation, Expo, lodash, axios</p>
 </dd>
 <dt>Personal Website</dt>
-<dd><p><a href="https://cjoshmartin.com" class="uri">https://cjoshmartin.com</a></p>
+<dd><p><a href="https://github.com/cjoshmartin-com" class="uri">https://github.com/cjoshmartin-com</a></p>
 <p>This is a GitHub pages website I use to sharpen my skills and showcase myself. This site changes as I change. Semantic versioning using Travis-CI and Semantic-Release.</p>
 <p><strong>Technologies</strong>: React, Firebase, re-base, Travis-CI, semantic-release, Bootstrap, Semantic-UI, moment, marked, axios</p>
 </dd>
 </dl>
-</div>
-<div class="sidebar col-md-3 order-1">
 <h2 id="community-engagement">Community Engagement</h2>
-<p><em>Indy Open Tech Study Hall (Meetup)</em><br />
-</p>
-<p>August 2017 – Present<br />
-Assistant Organizer</p>
+<dl>
+<dt>August 2017 – Present</dt>
+<dd><p><em>Indy Open Tech Study Hall (Meetup)</em></p>
+<p>Organizer</p>
 <ul>
 <li>Help locate locations and sponsors for events</li>
 <li>Promote events on social media and work with other Organizers</li>
 </ul>
-<p><em>Design Patterns in React (Talk)</em> <br />
-January 2018</p>
+</dd>
+<dt>January 2018</dt>
+<dd><p><em>Design Patterns in React (Talk)</em></p>
 <ul>
 <li><a href="http://cjoshmartin.com/design-patterns-react/" class="uri">http://cjoshmartin.com/design-patterns-react/</a></li>
 </ul>
-<p><em>Client-side Applications with Firebase and React.js (Talk)</em><br />
-August 2017</p>
+</dd>
+<dt>August 2017</dt>
+<dd><p><em>Client-side Applications with Firebase and React.js (Talk)</em></p>
 <ul>
 <li><a href="http://slides.com/joshuamartin/deck#/" class="uri">http://slides.com/joshuamartin/deck#/</a></li>
 </ul>
+</dd>
+</dl>
 <h2 id="languages">Languages</h2>
-<p>Expert : C++, JavaScript</p>
-<p>Proficient : Python, Bash, Golang, Java</p>
-<p>Prior Experience : Ruby On Rails, Assumbly (HC12), VHDL</p>
+<dl>
+<dt>Expert</dt>
+<dd>C++, JavaScript
+</dd>
+<dt>Proficient</dt>
+<dd>Python, Bash, Golang, Java
+</dd>
+<dt>Prior Experience</dt>
+<dd>Ruby On Rails, Assumbly (HC12), VHDL
+</dd>
+</dl>
+</div>
+<div class="sidebar">
+
 </div>
 </div>
 </div>
