--- a/index.html
+++ b/index.html
@@ -52,32 +52,21 @@
 <dt>May – Aug. 2018</dt>
 <dd><p><em><strong>Software Engineering Intern</strong> for <a href="https://www.sep.com/">Software Engineering Professionals (SEP)</a></em> (Carmel, Indiana)</p>
 <ul>
-<li>Performed TDD and wrote acceptance testing using Cypress, Mocha, Chai, Enzyme, and Istanbul</li>
-<li>Created pull requests and actively participated in code reviews on Github Enterprise</li>
-<li>Helped bring a React application to Beta as well as implemented a state manager (MobX) into production</li>
-<li>Wrote services to make RESTful calls to a Java endpoint</li>
-<li>Engaged in Agile practices (Sprint Planning, Backlog Grooming, Continuous Integration &amp; Deployment)</li>
+<li><p>Accomplished bringing a React/Node.js application to Beta by implementing a state manager (MobX), writing components for use in application, then creating feature toggles to give beta users the right permissions to each new feature and particating in mobbing/pairing sessions.</p></li>
+<li><p>Ensured code quality by learning/practicing Test Driven Development (TDD), writing acceptance/unit tests using a testing suite (consisting of Cypress, Mocha, Chai, Enzyme, and Istanbul) and actively participated in code reviews on Github Enterprise</p></li>
+<li><p>Engaged in Agile practices (Sprint Planning, Backlog Grooming, Continuous Integration &amp; Deployment)</p></li>
 </ul>
 </dd>
 <dt>July - Oct. 2017</dt>
 <dd><p><em><strong>Software Engineering Intern</strong> with IU School Medicine Department of Radiology and Imaging Sciences</em> (Indianapolis, Indiana)</p>
 <ul>
-<li>Build interfaces for the Doctor, Research Students, and Radiology department in Ruby on Rails, Vagrant and Puppet</li>
-<li>Supplied desktop support by means of imaging and deploying computers</li>
+<li>Creating value for Doctors and Research Students, by developing applications in Ruby on Rails and Python, committing code to Github then deploying said applications using Vagrent and Puppet.</li>
 </ul>
 </dd>
 <dt>May 2016 - Apr. 2017</dt>
 <dd><p><em><strong>Software Quality Assurance Intern</strong> at <a href="http://www.thecn.com/">CourseNetworking</a></em> (Indianapolis, Indiana)</p>
 <ul>
-<li>Wrote automation scripts to test CourseNetworking’s UI using Node.js (JavaScript), nightwatch.js (an end to end testing framework) and Selenium Web Driver.</li>
-<li>Worked on a collaborative team, made weekly reports, and met weekly deadlines for scripts.</li>
-<li>Wrote functions that enabled writing test with nightwatch.js easier and wrote documentation on how to use these functions for future users.</li>
-</ul>
-</dd>
-<dt>Nov. 2015 - May 2016</dt>
-<dd><p><em><strong>Digital Job Board Development Specialist Intern</strong> at Indiana University School of Dentistry</em> (Indianapolis, Indiana)</p>
-<ul>
-<li>Designed email to be backwards compatible with other email clients and be responsive to media queries.</li>
+<li>Added value by writing acceptance test using nightwatch.js and Selenium Web Driver, writing weekly reports and documentation. Futhermore meeting weekly deadlines.</li>
 </ul>
 </dd>
 </dl>
@@ -123,7 +112,7 @@
 <dd>C++, JavaScript
 </dd>
 <dt>Proficient</dt>
-<dd>Python, Bash, Golang, Java
+<dd>Python, Bash, Golang, Java, Matlab
 </dd>
 <dt>Prior Experience</dt>
 <dd>Ruby On Rails, Assumbly (HC12), VHDL
