--- a/index.html
+++ b/index.html
@@ -184,18 +184,37 @@ ul a {
 			<ul>
 				<li>Minors in Computer Science and Mathematics</li>
 			</ul>
-
 			<h3>Corporate Experience</h3>
+
+
 			<div class="content-with-words">
-				<h4>Freelance React/React Native Developer</h4>
-				<p><em>Reprogrammed LLC</em> (Remote)</p>
-				<h5>January 2020 - Present</h5>
+				<h4>Frontend Engineer</h4>
+				<p><em>
+					<a 
+						href="https://www.amazon.jobs/en/landing_pages/working-at-amazon"
+					>Amazon - Ad Tech</a>
+				</em> (Hybrid, Chicago, IL)</p>
+				<h5>June 2022 – December 2023</h5>
 			</div>
 			<ul>
-				<li><p>Without much direction was able build products clients really wanted; creating revenue generating value in Typescript, StoryBook, Figma, Express, Redux, React, Firebase, React native</p></li>
-				<li><p>Refactor legacy codebases, and was able meet deadlines on a reliably bases</p></li>
+				<li><p>Mentored developers in crafting high-quality JavaScript and React code for optimal performance.</p></li>
+				<li><p>Managed and deployed a diverse codebase encompassing React.js, Redux, Node.js, TypeScript, styled-components, and Java Spring frameworks.</p></li>
+				<li><p>Authored technical documentation for proposed features and facilitated review meetings to solicit feedback and refine proposals.</p></li>
+				<li><p>Orchestrated the deployment of applications to millions of users, translating Figma designs into functional features and providing operational support post-deployment.</p></li>
+				<li><p>Conducted comprehensive analysis and troubleshooting of full-stack issues, utilizing AWS CloudWatch for effective triaging and resolution.</p></li>
+			</ul>
 
-        <li><p>Modernized local development and dependency management by implementing docker/docker-compose and CI/CD</p></li>
+			<div class="content-with-words">
+				<h4>React Native Developer</h4>
+				<p><em> Simon Property Group </em> (Contract, Full Time)</p>
+				<h5>August 2021 – June 2022</h5>
+			</div>
+			<ul>
+				<li><p>Collaborated with clients and designers using Figma and GitHub to deliver top-notch user experiences.</p></li>
+				<li><p>Boosted app performance with React Profiler, lazy loading, and optimized state management.</p></li>
+				<li><p>Ensured accessibility compliance by enhancing touch points, providing alt text, and improving color contrast.</p></li>
+				<li><p>Met tight deadlines, delivering a feature-rich app in just three months.</p></li>
+				<li><p>Resolved API issues with client developers, facilitating endpoint development for project success.</p></li>
 			</ul>
 
 			<div class="content-with-words">
@@ -211,11 +230,18 @@ ul a {
 
 			<ul>
 				<li>
-            Develop/maintaining both frontend and backend applications for State Farm (e-commerce website for state farm agents, domain registration aggregator and custom CMS for improving State Farm Agents’ web presents) in Vue, Django, Celery, Redis, and Kubernetes.
-        </li>
-        <li>
-            Pushed initiative to improve testing across company. In the form of adding integration testing (Cypress.js) and unit testing (Pytest and Jest)
-        </li>
+					<p>Developed and maintained frontend and backend applications for State Farm, serving millions of agents using Vue.js, Django, Hapi.js, and Node.js.<p></p>
+				</li>
+				<li>
+				<p>
+					Integrated Celery, Redis, Docker, and Kubernetes to optimize scalability and performance, enhancing State Farm
+					agents' online presence.</p>
+				</li>
+				<li>
+					Pushed a initiative to improve testing across whole company. By adding integration testing (cypress.js) and unit testing
+					(pytest and
+					jest)
+				</li>
 			</ul>
 
 			<div class="content-with-words">
@@ -224,31 +250,18 @@ ul a {
 				<h5 id="october-2019---may-2020">October 2019 - May 2020</h5>
 			</div>
 			<ul>
-				<li><p>Created a hardware emulator API for the QA teams to run their automation test against in C#</p></li>
-				<li><p>Wrote automation scripts and developer tools in Python for testing parking systems and web applications</p></li>
-			</ul>
-			<div class="content-with-words">
-				<h4 id="software-engineering-intern">Software Engineering Intern</h4>
-				<p><em><a href="https://www.sep.com/">Software Engineering Professionals (SEP)</a></em> (Carmel, Indiana)</p>
-				<h5>May – August 2019, 2018</h5>
-			</div>
-			<ul>
-				<li><p>Accomplished bringing a React/Node.js application to beta by implementing a state manager (MobX), writing components for use in application, then creating feature toggles to give beta users the right permissions to each new feature and participating in mobbing/pairing sessions.</p></li>
-				<li><p>Engaged in agile practices (Sprint Planning, Backlog Grooming, Continuous Integration &amp; Deployment).</p></li>
-			</ul>
-
-			<h3>Projects</h3>
-			<h4>Accounter</h4>
-			<p>A Django, Celery application to speed up the process of tax preparation for CPAs. Hosted using Dokku and AWS. Designed in Figma.</p>
-			<h4>Listaan</h4>
-			<p>A React native and Django app hosted on Google Cloud Platform to make it easy to create shareable wishlists with family and friends. Hoping to add features for purchase aggregation.</p>
-			<h4>Venmo @ Graduation</h4>
-			<p>A LED screen and a Raspberry PI in my graduation cap. Allowing people to Venmo me @ graduation then their message would display on my graduation cap.</p>
+				<li>
+					<p>Engineered a hardware emulator API in C# to streamline automation testing for QA teams, enhancing testing capabilities and efficiency.</p>
+				</li>
+				<li>
+					<p>Proficiently developed applications using a versatile skill set encompassing C#, Python, and Lua, demonstrating adaptability and expertise across multiple programming languages.</p>
+				</li>
+				</ul>
 
 		<div style="display: flex;flex-direction: column;">
 			<section>
 				<h3>Skills</h3>
-				<p> JavaScript, Redux, Typescript, CSS, Flexbox/Grids, Figma, Python, Django, Postgres, git, C++, Go, Google Cloud Platform/AWS, Docker, Kubernetes, CI/CD</p>
+				<p>JavaScript, Nodejs, Redux, Typescript, CSS, Flexbox,Grids, Figma, Python, Django, Postgres, Git, Google Cloud Platform, AWS, Docker, Kubernetes, CI/CD</p>
 			</section>
 		</div>
 		</div>
