React native jobs

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ h2 {
 h3 {
     color: #397249;
     margin-top: 0;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 /* There is a bar just before each category */
 h3:before {
@@ -81,14 +81,14 @@ dt {
 }
 dd {
     margin-left: 17%;
-    padding-bottom: .5rem;
+    padding-bottom: 1rem;
 }
 dl {
     margin-bottom: 0;
 }
 p {
     margin-top:0;
-    margin-bottom:7px;
+    margin-bottom: 7px;
 }
 
 /* Blockquotes */
@@ -116,7 +116,7 @@ hr {
 
 ul {
     margin: 0;
-    margin-bottom: .5rem;
+    margin-bottom: 1rem;
 }
 ul a {
     max-width: 2rem;
@@ -142,7 +142,7 @@ ul a {
 			flex-direction: column;
 			font-family: 'charterregular', 'Times New Roman', Times;
 			background: #FFFFFF;
-			font-size: 13px;
+			font-size: 16px;
 			justify-content: center;
 			align-items: center;
 		"
@@ -150,7 +150,7 @@ ul a {
 
 		<div 
 		style="
-			max-width: 1000px;
+			max-width: 800px;
 		"
 			>
 			<div id="header">
@@ -167,26 +167,37 @@ ul a {
 					<p>
 						<a href="mailto:contact@cjoshmartin.com" class="email">contact@cjoshmartin.com</a> 
 						<span>•</span> 
-						<a href="https://www.github.com/cjoshmartin">github.com/cjoshmartin</a> 
+						<a href="https://cjoshmartin.com">cjoshmartin.com</a> 
 						<span>•</span>
 						<a href="https://www.linkedin.com/in/joshua-martin-55740652/">cjoshmartin.com/linkedin</a>
 						<br />
 					</p>
 				</blockquote>
 			</div>
-
-			<h3>Education</h3>
-      <div class="content-with-words">
-			<h4>Bachelor of Science in Computer Engineering from Purdue School of Engineering and Technology</h4>
-			<h5>December 2019</h5>
-			<p>(Indianapolis, Indiana)</p>
-      </div>
-			<ul>
-				<li>Minors in Computer Science and Mathematics</li>
-			</ul>
 			<h3>Corporate Experience</h3>
-
-
+			<div class="content-with-words">
+				<h4>Frontend Engineer</h4>
+				<p><em>
+					Reprogrammed Software
+				</em> (Chicago, IL)</p>
+				<h5>December 2023 - present</h5>
+			</div>
+			<ul>
+				<li>
+					<!-- <p>Developed applications in Nextjs, React and React Native to fit customers needs for web, mobile and IoT development</p>	 -->
+					<p>Developed Web applications in Nextjs, React, Typescript to optimize customer experience for SEO and user experience</p>	
+				</li>
+				<li>
+					<p>Developed React Native applications for iOS and Android to fit customers needs for mobile development working with
+						Expo, WebViews, Firebase, React-Hook-Form and Component libraries like UI-Kitten </p>
+				</li>
+				<li>
+					<p>Deployed applications to Vercel for web applications, or via Github actions and EAS for React Native</p>
+				</li>
+				<li>
+					<p>Promoted community engagement by speaking at meetups and hosting events around React and React Native</p>
+				</li>
+			</ul>
 			<div class="content-with-words">
 				<h4>Frontend Engineer</h4>
 				<p><em>
@@ -210,11 +221,11 @@ ul a {
 				<h5>August 2021 – June 2022</h5>
 			</div>
 			<ul>
-				<li><p>Collaborated with clients and designers using Figma and GitHub to deliver top-notch user experiences.</p></li>
-				<li><p>Boosted app performance with React Profiler, lazy loading, and optimized state management.</p></li>
-				<li><p>Ensured accessibility compliance by enhancing touch points, providing alt text, and improving color contrast.</p></li>
-				<li><p>Met tight deadlines, delivering a feature-rich app in just three months.</p></li>
-				<li><p>Resolved API issues with client developers, facilitating endpoint development for project success.</p></li>
+				<li><p>Collaborated with clients and designers using Figma and GitHub to deliver top-notch user experiences resulting in boosting star ratings in app stores</p></li>
+				<li><p>Boosted application performance with React Profiler, lazy loading, and optimized state management</p></li>
+				<li><p>Ensured accessibility compliance by enhancing touch points, providing alt text, and improving color contrast</p></li>
+				<li><p>Met tight deadlines, delivering a feature-rich application in just three months</p></li>
+				<li><p>Resolved API issues with client developers, facilitating endpoint development for project success</p></li>
 			</ul>
 
 			<div class="content-with-words">
@@ -233,11 +244,6 @@ ul a {
 					<p>Developed and maintained frontend and backend applications for State Farm, serving millions of agents using Vue.js, Django, Hapi.js, and Node.js.<p></p>
 				</li>
 				<li>
-				<p>
-					Integrated Celery, Redis, Docker, and Kubernetes to optimize scalability and performance, enhancing State Farm
-					agents' online presence.</p>
-				</li>
-				<li>
 					Pushed a initiative to improve testing across whole company. By adding integration testing (cypress.js) and unit testing
 					(pytest and
 					jest)
@@ -251,17 +257,24 @@ ul a {
 			</div>
 			<ul>
 				<li>
-					<p>Engineered a hardware emulator API in C# to streamline automation testing for QA teams, enhancing testing capabilities and efficiency.</p>
-				</li>
-				<li>
 					<p>Proficiently developed applications using a versatile skill set encompassing C#, Python, and Lua, demonstrating adaptability and expertise across multiple programming languages.</p>
 				</li>
 				</ul>
 
+			<h3>Education</h3>
+      <div class="content-with-words">
+			<h4>Bachelor of Science in Computer Engineering from Purdue School of Engineering and Technology</h4>
+			<h5>December 2019</h5>
+			<p>(Indianapolis, Indiana)</p>
+      </div>
+			<ul>
+				<li>Minors in Computer Science and Mathematics</li>
+			</ul>
+
 		<div style="display: flex;flex-direction: column;">
 			<section>
 				<h3>Skills</h3>
-				<p>JavaScript, Nodejs, Redux, Typescript, CSS, Flexbox,Grids, Figma, Python, Django, Postgres, Git, Google Cloud Platform, AWS, Docker, Kubernetes, CI/CD</p>
+				<p>JavaScript, Nodejs, React, Redux, Nextjs,Typescript, CSS, Flexbox, CSS Grids, Figma</p>
 			</section>
 		</div>
 		</div>
